fix text overflow in the about section

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -18,7 +18,6 @@
 	display:flex;
 	justify-content: center;
 	align-items: center;
-
 	color:#cc6222;
 }
 #about{
@@ -30,7 +29,7 @@
 	margin:auto;
 	text-align: center;
 	line-height: 30px;
-	font-size: 20px;
+	font-size:calc( 2vh + 5px );
 	border-left: 2px solid #5354ed;
 	border-right: 2px solid #5354ed;
 	padding: 0 30px;
